# RTSP-to-HLS-for-SkyMonitor

./: .dockerignore  .gitignore  Dockerfile  README.md  config.json  docker-compose.yml  pyproject.toml
app/: config.py  main.py  recorder.py  rtsp.py
nginx/: nginx.conf
static/: app.css  player.js
templates/: admin.html  index.html  login.html
