[project]
name = "skymonitor"
version = "0.1.0"
description = "RTSP to HLS dashboard with admin settings"
requires-python = ">=3.10"
dependencies = [
  "fastapi==0.115.6",
  "uvicorn==0.30.6",
  "jinja2==3.1.4",
  "python-multipart==0.0.9",
  "itsdangerous==2.2.0",
  "loguru==0.7.2"
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]
